--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 feeding_time/__pycache__/settings.cpython-38.pyc
 feeding_time/__pycache__/__init__.cpython-38.pyc
+events/migrations/0001_initial.py
+db.sqlite3
+events/__pycache__/__init__.cpython-38.pyc
+events/__pycache__/admin.cpython-38.pyc
+events/__pycache__/apps.cpython-38.pyc
+events/__pycache__/models.cpython-38.pyc
+events/migrations/__pycache__/__init__.cpython-38.pyc
+feeding_time/__pycache__/urls.cpython-38.pyc
