--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ events/__pycache__/apps.cpython-38.pyc
 events/__pycache__/models.cpython-38.pyc
 events/migrations/__pycache__/__init__.cpython-38.pyc
 feeding_time/__pycache__/urls.cpython-38.pyc
+events/migrations/__pycache__/0001_initial.cpython-38.pyc
+feeding_time/__pycache__/wsgi.cpython-38.pyc
