--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ events/migrations/__pycache__/__init__.cpython-38.pyc
 feeding_time/__pycache__/urls.cpython-38.pyc
 events/migrations/__pycache__/0001_initial.cpython-38.pyc
 feeding_time/__pycache__/wsgi.cpython-38.pyc
+events/__pycache__/views.cpython-38.pyc
+events/__pycache__/urls.cpython-38.pyc
+events/__pycache__/
