--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ staffs/migrations/__pycache__/0001_initial.cpython-38.pyc
 animals/*
 foods/*
 staffs/*
+events/migrations/__pycache__/0002_animal_animalinanevent_food_foodinanevent_staff.cpython-38.pyc
