--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,16 @@
-feeding_time/__pycache__/settings.cpython-38.pyc
-feeding_time/__pycache__/__init__.cpython-38.pyc
-events/migrations/0001_initial.py
-db.sqlite3
-events/__pycache__/__init__.cpython-38.pyc
-events/__pycache__/admin.cpython-38.pyc
-events/__pycache__/apps.cpython-38.pyc
-events/__pycache__/models.cpython-38.pyc
-events/migrations/__pycache__/__init__.cpython-38.pyc
-feeding_time/__pycache__/urls.cpython-38.pyc
-events/migrations/__pycache__/0001_initial.cpython-38.pyc
-feeding_time/__pycache__/wsgi.cpython-38.pyc
-events/__pycache__/views.cpython-38.pyc
-events/__pycache__/urls.cpython-38.pyc
+# *.pyc
+
+*.pyc
+
+# __pycache__
+
 events/__pycache__/*
-staffs/__pycache__/*
-animals/__pycache__/*
-foods/__pycache__/*
-events/migrations/__pycache__/0003_auto_20210907_0749.cpython-38.pyc
-events/migrations/__pycache__/0002_animal_animalinanevent_food_foodinanevent_staff.cpython-38.pyc
-events/migrations/__pycache__/0004_animal_animalinanevent_food_foodinanevent_staff.cpython-38.pyc
+feeding_time/__pycache__/*
+
+# db.sqlite3
+
+db.sqlite3
+
+# migrations
+
+events/migrations/*
